<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/net_err"
            android:textSize="15dp"
            android:gravity="center"
            android:textStyle="italic"
            android:textColor="#ff0000"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:visibility="invisible"/>


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:singleLine="true"
            android:textSize="16dp"
            android:maxLines="1"
            android:maxLength="9"
            android:hint="@string/hint_email" />



        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:paddingTop="3dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="16dp"
                android:maxLines="1"
                android:hint="@string/hint_password" />
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/hint_login"
            android:background="@color/colorPrimary"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/hint_link_signup"
            android:textAllCaps="false"
            android:textColor="#808080"
            android:textSize="15dp" />

        <Button
            android:id="@+id/resetpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dip"
            android:background="@null"
            android:text="@string/hint_link_forgotten_password"
            android:textAllCaps="false"
            android:textColor="#808080"
            android:textSize="15dp" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
